DEVELOPMENT VERSION
 Global:
 - Using Grunt for build tools.
 - Lots of reworking of the build tools - much less room for human error.
 - Removed all references to __proto__.

0.0.9 : 2014-02-04
 Global:
 - Migrated everything to CommonJS format modules (no more hacks for the
   web, those will be handled independently).
 - Better error messaging across the board (no more "..." errors).
 - Lots of adjustments to reduce the minified size by several kilobytes.
 - Created several utilities in the bin directory for creating combined
   and minified versions of o.js.
 - Combined o.js and minified o-min.js are now shipped within the o-js
   repository.
 Classes:
 - Renamed o.Constructor to o.Class, because that is what it is and it is
   less to type.
 Traits:
 - Added requires attribute to o.Trait so that traits can declare a
   base-line interface that they require to be installed onto an
   object.
 Types:
 - Added o.simpleObjectType for checking if an object's constructor is Object.
 - Added o.typeType, o.attributeType, o.traitType, and o.classType for validating
   and coercing o.js's built-in object types.
 - ArrayOfType and ObjectOfType now apply their inner type's coercions.
 - Greatly simplify the trait type.
 - InstanceOfType declares a coercion that will create a new instance using
   the value as arguments to the constructor.
 - Added o.positiveIntType due to this type being a common case.
 Plumbing:
 - Exposed o.ucFirst to the public.

0.0.8 : 2014-01-03
 - In addition to accepting an Array, o.DuckType now accepts an Object,
   allowing for type checking.
 - Added o.PatternType for creating types that match against a RegExp.
 - Added bower.json so that Bower has some more info about this package.
 - Attribute/Trait.install() now supports a second argument for specifying
   the value of the attribute(s).
 - The attributes attribute of Trait is now an object instead of an array.
 - Added o.local() to localize object property changes to a scope.